# multipr

./: .gitattributes  .gitignore  Cargo.toml  DESIGN.md  README.md
src/: splitpr.rs
tests/fixtures/: diff-Nru-multi-file.diff  get_diff_from_repo_multi_file.diff  git-multi-file.diff  test-repo.tar
