[package]
name = "multipr"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
atty = "0.2"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
git2 = "0.19"
log = "0.4"

[dev-dependencies]
googletest = "0.13"
tar = "0.4"
tempfile = "3"

[[bin]]
name = "splitpr"
path = "src/splitpr.rs"
